[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.3"}
python-multipart = "^0.0.26"
aiofiles = "^25.1.0"
google-genai = "^1.73.0"
pillow = "^12.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
